--- a/proposal/references.bib
+++ b/proposal/references.bib
@@ -89,3 +89,21 @@
   url = {https://www2.census.gov/geo/tiger/TIGER2024/TRACT/},
   note = {accessed on March 5, 2025}
 }
+
+@Manual{rlang2024,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2024},
+  url = {https://www.R-project.org/},
+}
+
+@software{esri_arcgis_2022, 
+    author = {{ESRI}}, 
+    title = {ArcGIS Pro}, 
+    version = {3}, 
+    year = {2022}, 
+    publisher = {Esri Inc.}, 
+    url = {https://www.esri.com/en-us/arcgis/products/arcgis-pro/overview}
+} 
