updated with wilson comments v1

--- a/proposal/references.bib
+++ b/proposal/references.bib
@@ -99,11 +99,32 @@
   url = {https://www.R-project.org/},
 }
 
-@software{esri_arcgis_2022, 
+@Manual{esri_arcgis_2022, 
     author = {{ESRI}}, 
-    title = {ArcGIS Pro}, 
-    version = {3}, 
+    title = {ArcGIS Pro},
     year = {2022}, 
     publisher = {Esri Inc.}, 
     url = {https://www.esri.com/en-us/arcgis/products/arcgis-pro/overview}
 } 
+
+@inbook{openshaw1979maup,
+  author    = {Openshaw, S. and Taylor, P. J.},
+  title     = {A million or so correlation coefficients: three experiments on the modifiable areal unit problem},
+  booktitle = {Statistical Applications in Spatial Sciences},
+  editor    = {N. Wrigley},
+  year      = {1979},
+  publisher = {Pion},
+  address   = {London},
+  pages     = {127--144}
+}
+
+@inbook{wong2009,
+	title = {The Modifiable Areal Unit Problem (MAUP)},
+	author = {Wong, David},
+	year = {2009},
+	date = {2009},
+	publisher = {SAGE Publications, Ltd},
+	pages = {105--123},
+	doi = {10.4135/9780857020130.n7},
+	url = {http://dx.doi.org/10.4135/9780857020130.n7}
+}
