--- a/proposal/references.bib
+++ b/proposal/references.bib
@@ -73,12 +73,22 @@
 
 @misc{baltimore_nsa_2024, 
   title={Neighborhood Statistical Area (NSA) Boundaries}, 
+  url={https://data.baltimorecity.gov/datasets/baltimore::real-property-information-2/explore}, 
+  journal={Open Baltimore}, 
+  publisher={Baltimore City},
+  author={{Baltimore City}},
+  year={2024}, 
+  month={April}
+} 
+
+@misc{baltimore_prop_2022, 
+  title={Real Property Information}, 
   url={https://data.baltimorecity.gov/datasets/68a1136acff444bba6c93e845dfc00e1_0/explore}, 
   journal={Open Baltimore}, 
   publisher={Baltimore City},
   author={{Baltimore City Department of Planning}},
-  year={2024}, 
-  month={April}
+  year={2023}, 
+  month={March}
 } 
 
 @misc{uscensus2020,
